--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-slick": "^0.31.0",
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.26.18",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
